# vibe_project

./: .dockerignore  .env.example  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  AUTHENTICATION.md  BOOKING_API_REFERENCE.md  BOOKING_FEATURE.md  CHANGES_SUMMARY.md  CHARTS_DOCUMENTATION.md  CHARTS_QUICK_START.md  CHARTS_VISUAL_GUIDE.md  CHAT_ARCHITECTURE.md  CHAT_ARCHITECTURE_DIAGRAM.md  CHAT_FEATURE.md  CHAT_FEATURE_GUIDE.md  CHAT_IMPLEMENTATION_SUMMARY.md  CHAT_QUICK_START.md  CHAT_TESTING_GUIDE.md  CHAT_UI_GUIDE.md  CHAT_UI_PREVIEW.html  CHAT_VISUAL_GUIDE.md  CONTRIBUTING.md  CORE_FEATURES.md  DELIVERY_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_STEPS.md  DOCKER_COMMANDS.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_QUICK_REFERENCE.md  DOCKER_SETUP.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  NGROK_QUICK_REFERENCE.md  NGROK_SETUP.md  QUICK_START.md  README.md  REVIEW_CHECKLIST.md  START_HERE.md  TESTING.md  (+5 more)
.github/: README.md  (+6 more)
backend/: .dockerignore  .env.example  DATABASE_SCHEMA.md  DATABASE_SETUP.md  Dockerfile  Dockerfile.prod  README.md  RUNBOOK.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_feedback_table.py  (+4 more)
backend/app/: __init__.py  main.py
backend/scripts/: README.md  db_migrate.sh
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_bookings.py  test_chat.py  test_client.py  test_coach.py  test_database.py  test_dependencies.py  test_feedback.py  test_health.py  test_integration.py  test_models.py  test_security.py  test_services.py  test_users.py
(+94 files in other folders)
