[project]
name = "vibe-backend"
version = "0.1.0"
description = "Backend API for Vibe Fitness Coaching Platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Vibe Project Team" }
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
